--- a/RouletteExercise/RouletteGameUnitTests/RouletteGameUnitTests.csproj
+++ b/RouletteExercise/RouletteGameUnitTests/RouletteGameUnitTests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouletteGameUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RouletteGame\RouletteGame.csproj">
